--- a/index.html
+++ b/index.html
@@ -771,34 +771,76 @@
                     pomysłem na automatyzację.</p>
             </div>
 
-            <form class="space-y-6 bg-white/5 p-8 rounded-3xl border border-white/10">
-                <div class="grid md:grid-cols-2 gap-6">
-                    <div>
-                        <label for="name" class="block text-sm font-medium text-gray-300 mb-2">Imię i Nazwisko</label>
-                        <input type="text" id="name"
-                            class="w-full bg-background border border-white/10 rounded-xl px-4 py-3 text-white focus:outline-none focus:border-primary/50 transition-colors"
-                            placeholder="Jan Kowalski">
-                    </div>
-                    <div>
-                        <label for="email" class="block text-sm font-medium text-gray-300 mb-2">Email Firmowy</label>
-                        <input type="email" id="email"
-                            class="w-full bg-background border border-white/10 rounded-xl px-4 py-3 text-white focus:outline-none focus:border-primary/50 transition-colors"
-                            placeholder="jan@firma.pl">
-                    </div>
-                </div>
-                <div>
-                    <label for="message" class="block text-sm font-medium text-gray-300 mb-2">O czym chcesz
-                        porozmawiać?</label>
-                    <textarea id="message" rows="4"
-                        class="w-full bg-background border border-white/10 rounded-xl px-4 py-3 text-white focus:outline-none focus:border-primary/50 transition-colors"
-                        placeholder="Opisz krótko swój proces..."></textarea>
-                </div>
-                <button type="submit"
-                    class="w-full py-4 rounded-xl bg-gradient-to-r from-primary to-accent text-white font-bold text-lg hover:opacity-90 transition-opacity shadow-lg shadow-primary/25">
-                    Wyślij Zgłoszenie
-                </button>
-            </form>
+            <button type="button" onclick="openModal()"
+                class="w-full py-4 rounded-xl bg-gradient-to-r from-primary to-accent text-white font-bold text-lg hover:opacity-90 transition-opacity shadow-lg shadow-primary/25">
+                Otwórz Formularz Kontaktowy
+            </button>
+        </div> <!-- End of form container replacement -->
         </div>
+    </section>
+
+    <!-- Contact Modal -->
+    <div id="contact-modal" class="fixed inset-0 z-[100] hidden opacity-0 transition-opacity duration-300"
+        aria-labelledby="modal-title" role="dialog" aria-modal="true">
+        <!-- Backdrop -->
+        <div class="fixed inset-0 bg-black/80 backdrop-blur-sm transition-opacity" onclick="closeModal()"></div>
+
+        <div class="fixed inset-0 z-10 w-screen overflow-y-auto">
+            <div class="flex min-h-full items-center justify-center p-4 text-center sm:p-0">
+
+                <!-- Modal Panel -->
+                <div
+                    class="relative transform overflow-hidden rounded-3xl bg-surface border border-white/10 text-left shadow-2xl transition-all sm:my-8 sm:w-full sm:max-w-2xl">
+
+                    <!-- Close Button -->
+                    <button onclick="closeModal()"
+                        class="absolute top-4 right-4 text-gray-400 hover:text-white transition-colors p-2 z-10">
+                        <i data-lucide="x" class="w-6 h-6"></i>
+                    </button>
+
+                    <div class="p-8 md:p-10">
+                        <div class="text-center mb-8">
+                            <h3 class="text-2xl md:text-3xl font-display font-bold mb-2" id="modal-title">Odbierz
+                                Darmową Strategię Automatyzacji</h3>
+                            <p class="text-gray-400">W 15 minut zidentyfikujemy procesy, które kradną Twój czas i
+                                pieniądze. Otrzymasz gotowy plan działania - bez żadnych zobowiązań.</p>
+                        </div>
+
+                        <form class="space-y-6">
+                            <div class="grid md:grid-cols-2 gap-6">
+                                <div>
+                                    <label for="modal-name" class="block text-sm font-medium text-gray-300 mb-2">Imię i
+                                        Nazwisko</label>
+                                    <input type="text" id="modal-name"
+                                        class="w-full bg-background border border-white/10 rounded-xl px-4 py-3 text-white focus:outline-none focus:border-primary/50 transition-colors"
+                                        placeholder="Jan Kowalski">
+                                </div>
+                                <div>
+                                    <label for="modal-email" class="block text-sm font-medium text-gray-300 mb-2">Email
+                                        Firmowy</label>
+                                    <input type="email" id="modal-email"
+                                        class="w-full bg-background border border-white/10 rounded-xl px-4 py-3 text-white focus:outline-none focus:border-primary/50 transition-colors"
+                                        placeholder="jan@firma.pl">
+                                </div>
+                            </div>
+                            <div>
+                                <label for="modal-message" class="block text-sm font-medium text-gray-300 mb-2">O czym
+                                    chcesz porozmawiać?</label>
+                                <textarea id="modal-message" rows="4"
+                                    class="w-full bg-background border border-white/10 rounded-xl px-4 py-3 text-white focus:outline-none focus:border-primary/50 transition-colors"
+                                    placeholder="Opisz krótko swój proces..."></textarea>
+                            </div>
+                            <button type="submit"
+                                class="w-full py-4 rounded-xl bg-gradient-to-r from-primary to-accent text-white font-bold text-lg hover:opacity-90 transition-opacity shadow-lg shadow-primary/25">
+                                Rezerwuję Darmową Konsultację
+                            </button>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    </div>
     </section>
 
     <!-- Footer -->
