Update case studies to light theme matching main page

--- a/pages/case-study-art-tim.html
+++ b/pages/case-study-art-tim.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Art-Tim Case Study - Fluinty</title>
+    <title>Art-Tim Case Study - Flu inty</title>
 
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -24,10 +24,10 @@
             theme: {
                 extend: {
                     colors: {
-                        background: '#030712',
-                        surface: '#111827',
-                        primary: '#06C0B3',
-                        accent: '#45CAC3',
+                        background: '#F8FAFC',
+                        surface: '#FFFFFF',
+                        primary: '#00C4B4',
+                        accent: '#2DD4BF',
                         'accent-glow': '#7bdcb5',
                         secondary: '#0B3D70',
                     },
@@ -48,11 +48,11 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
 </head>
 
-<body class="bg-background text-white overflow-x-hidden antialiased">
+<body class="bg-background text-gray-900 overflow-x-hidden antialiased">
 
     <!-- Navigation -->
     <nav id="navbar"
-        class="fixed w-full z-50 transition-all duration-300 py-4 px-6 lg:px-12 backdrop-blur-md bg-background/50 border-b border-white/5">
+        class="fixed w-full z-50 transition-all duration-300 py-4 px-6 lg:px-12 backdrop-blur-md bg-background/50 border-b border-gray-200">
         <div class="max-w-7xl mx-auto flex justify-between items-center">
             <a href="../index.html"
                 class="text-2xl font-display font-bold tracking-tighter bg-clip-text text-transparent bg-gradient-to-r from-primary to-accent">
@@ -61,7 +61,7 @@
 
             <div class="flex items-center gap-8">
                 <a href="../index.html#case-studies"
-                    class="text-sm font-medium text-gray-300 hover:text-white transition-colors flex items-center gap-2">
+                    class="text-sm font-medium text-gray-700 hover:text-gray-900 transition-colors flex items-center gap-2">
                     <i data-lucide="arrow-left" class="w-4 h-4"></i> Powrót
                 </a>
             </div>
@@ -87,30 +87,30 @@
                 Automatyzacja Zarządzania Flotą dla Art-Tim
             </h1>
 
-            <p class="text-lg text-gray-400 max-w-2xl mx-auto">
+            <p class="text-lg text-gray-600 max-w-2xl mx-auto">
                 Kompleksowy system eliminujący ryzyko strat finansowych i zapewniający 100% kontrolę nad pojazdami.
             </p>
         </div>
     </section>
 
     <!-- Stats Bar -->
-    <section class="py-12 border-y border-white/5 bg-surface/30">
+    <section class="py-12 border-y border-gray-200 bg-surface/30">
         <div class="max-w-7xl mx-auto px-6 grid grid-cols-2 md:grid-cols-4 gap-8 text-center">
             <div>
                 <div class="text-4xl font-bold text-primary mb-2">100%</div>
-                <div class="text-sm text-gray-400">Kontroli nad flotą</div>
+                <div class="text-sm text-gray-600">Kontroli nad flotą</div>
             </div>
             <div>
                 <div class="text-4xl font-bold text-accent">Auto</div>
-                <div class="text-sm text-gray-400">Powiadomienia</div>
+                <div class="text-sm text-gray-600">Powiadomienia</div>
             </div>
             <div>
                 <div class="text-4xl font-bold text-secondary">0</div>
-                <div class="text-sm text-gray-400">Przegapionych terminów</div>
+                <div class="text-sm text-gray-600">Przegapionych terminów</div>
             </div>
             <div>
-                <div class="text-4xl font-bold text-white">$$$</div>
-                <div class="text-sm text-gray-400">Zabezpieczone finanse</div>
+                <div class="text-4xl font-bold text-gray-900">$$$</div>
+                <div class="text-sm text-gray-600">Zabezpieczone finanse</div>
             </div>
         </div>
     </section>
@@ -123,7 +123,7 @@
             <div class="grid md:grid-cols-[1fr_2fr] gap-12 items-start">
                 <h2 class="text-2xl font-display font-bold text-primary">O Kliencie</h2>
                 <div>
-                    <p class="text-lg text-gray-300 leading-relaxed">
+                    <p class="text-lg text-gray-700 leading-relaxed">
                         Art-Tim to dynamicznie rozwijająca się firma kurierska z oddziałami w Katowicach, Wrocławiu i
                         Legnicy. Zarządzanie rozproszoną flotą pojazdów przy rosnącej skali działalności stało się
                         kluczowym wyzwaniem operacyjnym.
@@ -135,24 +135,24 @@
             <div class="grid md:grid-cols-[1fr_2fr] gap-12 items-start">
                 <h2 class="text-2xl font-display font-bold text-primary">Wyzwanie</h2>
                 <div class="space-y-6">
-                    <p class="text-lg text-gray-300 leading-relaxed">
+                    <p class="text-lg text-gray-700 leading-relaxed">
                         Brak centralnego systemu zarządzania flotą prowadził do chaosu informacyjnego i ryzyka
                         finansowego.
                     </p>
                     <ul class="space-y-4">
-                        <li class="flex items-start gap-4 p-4 rounded-xl bg-white/5 border border-white/10">
-                            <i data-lucide="map-pin" class="w-6 h-6 text-red-400 shrink-0 mt-1"></i>
+                        <li class="flex items-start gap-4 p-4 rounded-xl bg-gray-100 border border-gray-200">
+                            <i data-lucide="map-pin" class="w-6 h-6 text-red-500 shrink-0 mt-1"></i>
                             <div>
                                 <h3 class="font-bold mb-1">Decentralizacja</h3>
-                                <p class="text-sm text-gray-400">Trudności w śledzeniu lokalizacji i stanu pojazdów
+                                <p class="text-sm text-gray-600">Trudności w śledzeniu lokalizacji i stanu pojazdów
                                     pomiędzy oddziałami.</p>
                             </div>
                         </li>
-                        <li class="flex items-start gap-4 p-4 rounded-xl bg-white/5 border border-white/10">
-                            <i data-lucide="file-warning" class="w-6 h-6 text-red-400 shrink-0 mt-1"></i>
+                        <li class="flex items-start gap-4 p-4 rounded-xl bg-gray-100 border border-gray-200">
+                            <i data-lucide="file-warning" class="w-6 h-6 text-red-500 shrink-0 mt-1"></i>
                             <div>
                                 <h3 class="font-bold mb-1">Luki w Ubezpieczeniach</h3>
-                                <p class="text-sm text-gray-400">Ryzyko przeoczenia terminów ubezpieczeń i przeglądów,
+                                <p class="text-sm text-gray-600">Ryzyko przeoczenia terminów ubezpieczeń i przeglądów,
                                     grożące wysokimi karami.</p>
                             </div>
                         </li>
@@ -164,7 +164,7 @@
             <div class="grid md:grid-cols-[1fr_2fr] gap-12 items-start">
                 <h2 class="text-2xl font-display font-bold text-primary">Rozwiązanie</h2>
                 <div class="space-y-8">
-                    <p class="text-lg text-gray-300 leading-relaxed">
+                    <p class="text-lg text-gray-700 leading-relaxed">
                         Stworzyliśmy dedykowany system centralizujący zarządzanie flotą z automatycznymi
                         powiadomieniami.
                     </p>
@@ -174,21 +174,21 @@
                             <span
                                 class="absolute -left-[41px] top-0 w-6 h-6 rounded-full bg-accent border-4 border-background"></span>
                             <h3 class="text-xl font-bold mb-2">1. Centralna Baza Danych</h3>
-                            <p class="text-gray-400">Jeden system gromadzący wszystkie informacje o pojazdach,
+                            <p class="text-gray-600">Jeden system gromadzący wszystkie informacje o pojazdach,
                                 kierowcach i trasach.</p>
                         </div>
                         <div class="relative">
                             <span
                                 class="absolute -left-[41px] top-0 w-6 h-6 rounded-full bg-accent border-4 border-background"></span>
                             <h3 class="text-xl font-bold mb-2">2. Automatyczne Przypomnienia</h3>
-                            <p class="text-gray-400">System sam pilnuje terminów ubezpieczeń, przeglądów i wymian opon,
+                            <p class="text-gray-600">System sam pilnuje terminów ubezpieczeń, przeglądów i wymian opon,
                                 wysyłając powiadomienia z wyprzedzeniem.</p>
                         </div>
                         <div class="relative">
                             <span
                                 class="absolute -left-[41px] top-0 w-6 h-6 rounded-full bg-accent border-4 border-background"></span>
                             <h3 class="text-xl font-bold mb-2">3. Śledzenie Relokacji</h3>
-                            <p class="text-gray-400">Każda zmiana lokalizacji pojazdu jest rejestrowana, co zapewnia
+                            <p class="text-gray-600">Każda zmiana lokalizacji pojazdu jest rejestrowana, co zapewnia
                                 pełną transparentność.</p>
                         </div>
                     </div>
@@ -199,20 +199,20 @@
             <div class="grid md:grid-cols-[1fr_2fr] gap-12 items-start">
                 <h2 class="text-2xl font-display font-bold text-primary">Rezultaty</h2>
                 <div>
-                    <div class="p-8 rounded-3xl bg-gradient-to-br from-accent/20 to-primary/20 border border-white/10">
+                    <div class="p-8 rounded-3xl bg-gradient-to-br from-accent/20 to-primary/20 border border-gray-200">
                         <h3 class="text-2xl font-bold mb-6">Bezpieczeństwo i Kontrola</h3>
                         <div class="space-y-6">
-                            <div class="flex items-center justify-between border-b border-white/10 pb-4">
+                            <div class="flex items-center justify-between border-b border-gray-200 pb-4">
                                 <span>Kontrola nad flotą</span>
-                                <span class="text-xl font-bold text-green-400">100%</span>
+                                <span class="text-xl font-bold text-green-600">100%</span>
                             </div>
-                            <div class="flex items-center justify-between border-b border-white/10 pb-4">
+                            <div class="flex items-center justify-between border-b border-gray-200 pb-4">
                                 <span>Ryzyko kar finansowych</span>
-                                <span class="text-xl font-bold text-green-400">Wyeliminowane</span>
+                                <span class="text-xl font-bold text-green-600">Wyeliminowane</span>
                             </div>
                             <div class="flex items-center justify-between">
                                 <span>Oszczędność czasu zarządu</span>
-                                <span class="text-xl font-bold text-green-400">Znaczna</span>
+                                <span class="text-xl font-bold text-green-600">Znaczna</span>
                             </div>
                         </div>
                     </div>
@@ -223,19 +223,19 @@
     </section>
 
     <!-- Next Case Study -->
-    <section class="py-24 border-t border-white/5">
+    <section class="py-24 border-t border-gray-200">
         <div class="max-w-7xl mx-auto px-6 text-center">
             <p class="text-gray-500 mb-4">Następna realizacja</p>
             <h2 class="text-3xl md:text-5xl font-display font-bold mb-8">Eticod: Automatyzacja Zamówień</h2>
             <a href="case-study-eticod.html"
-                class="inline-flex items-center gap-2 px-8 py-4 rounded-full bg-white text-black font-bold hover:bg-gray-200 transition-colors">
+                class="inline-flex items-center gap-2 px-8 py-4 rounded-full bg-primary text-white font-bold hover:bg-primary/90 transition-colors">
                 Zobacz Case Study <i data-lucide="arrow-right" class="w-5 h-5"></i>
             </a>
         </div>
     </section>
 
     <!-- Footer -->
-    <footer class="bg-surface border-t border-white/5 py-12">
+    <footer class="bg-surface border-t border-gray-200 py-12">
         <div class="max-w-7xl mx-auto px-6 text-center text-gray-500 text-sm">
             &copy; 2025 Fluinty.
         </div>
