--- a/pages/case-study-eticod.html
+++ b/pages/case-study-eticod.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Eticod Case Study - Fluinty</title>
+    <title>Eticod Case Study - Flu inty</title>
 
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -24,10 +24,10 @@
             theme: {
                 extend: {
                     colors: {
-                        background: '#030712',
-                        surface: '#111827',
-                        primary: '#06C0B3',
-                        accent: '#45CAC3',
+                        background: '#F8FAFC',
+             urface: '#FFFFFF',
+               imary: '#00C4B4',
+                        accent: '#2DD4BF',
                         'accent-glow': '#7bdcb5',
                         secondary: '#0B3D70',
                     },
@@ -48,11 +48,11 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
 </head>
 
-<body class="bg-background text-white overflow-x-hidden antialiased">
+<body class="bg-background text-gray-900 overflow-x-hidden antialiased">
 
     <!-- Navigation -->
     <nav id="navbar"
-        class="fixed w-full z-50 transition-all duration-300 py-4 px-6 lg:px-12 backdrop-blur-md bg-background/50 border-b border-white/5">
+        class="fixed w-full z-50 transition-all duration-300 py-4 px-6 lg:px-12 backdrop-blur-md bg-background/50 border-b border-gray-200">
         <div class="max-w-7xl mx-auto flex justify-between items-center">
             <a href="../index.html"
                 class="text-2xl font-display font-bold tracking-tighter bg-clip-text text-transparent bg-gradient-to-r from-primary to-accent">
@@ -61,7 +61,7 @@
 
             <div class="flex items-center gap-8">
                 <a href="../index.html#case-studies"
-                    class="text-sm font-medium text-gray-300 hover:text-white transition-colors flex items-center gap-2">
+                    class="text-sm font-medium text-gray-700 hover:text-gray-900 transition-colors flex items-center gap-2">
                     <i data-lucide="arrow-left" class="w-4 h-4"></i> Powrót
                 </a>
             </div>
@@ -87,30 +87,30 @@
                 Automatyzacja Procesowania Zamówień dla Eticod
             </h1>
 
-            <p class="text-lg text-gray-400 max-w-2xl mx-auto">
+            <p class="text-lg text-gray-600 max-w-2xl mx-auto">
                 Inteligentny system przetwarzający zamówienia od e-maila do ERP, oszczędzający 160 godzin miesięcznie.
             </p>
         </div>
     </section>
 
     <!-- Stats Bar -->
-    <section class="py-12 border-y border-white/5 bg-surface/30">
+    <section class="py-12 border-y border-gray-200 bg-surface/30">
         <div class="max-w-7xl mx-auto px-6 grid grid-cols-2 md:grid-cols-4 gap-8 text-center">
             <div>
                 <div class="text-4xl font-bold text-primary mb-2">160h</div>
-                <div class="text-sm text-gray-400">Zaoszczędzone miesięcznie</div>
+                <div class="text-sm text-gray-600">Zaoszczędzone miesięcznie</div>
             </div>
             <div>
                 <div class="text-4xl font-bold text-accent">0%</div>
-                <div class="text-sm text-gray-400">Błędów w danych</div>
+                <div class="text-sm text-gray-600">Błędów w danych</div>
             </div>
             <div>
                 <div class="text-4xl font-bold text-secondary">24/7</div>
-                <div class="text-sm text-gray-400">Czas pracy systemu</div>
+                <div class="text-sm text-gray-600">Czas pracy systemu</div>
             </div>
             <div>
-                <div class="text-4xl font-bold text-white">10x</div>
-                <div class="text-sm text-gray-400">Szybsza obsługa</div>
+                <div class="text-4xl font-bold text-gray-900">10x</div>
+                <div class="text-sm text-gray-600">Szybsza obsługa</div>
             </div>
         </div>
     </section>
@@ -123,7 +123,7 @@
             <div class="grid md:grid-cols-[1fr_2fr] gap-12 items-start">
                 <h2 class="text-2xl font-display font-bold text-primary">O Kliencie</h2>
                 <div>
-                    <p class="text-lg text-gray-300 leading-relaxed">
+                    <p class="text-lg text-gray-700 leading-relaxed">
                         Eticod to lider w branży poligraficznej z 30-letnim doświadczeniem. Specjalizują się w
                         nowoczesnym druku fleksograficznym i cyfrowym, obsługując tysiące zamówień miesięcznie. Jako
                         firma stawiająca na innowacje, szukali sposobu na usprawnienie procesu przyjmowania
@@ -136,24 +136,24 @@
             <div class="grid md:grid-cols-[1fr_2fr] gap-12 items-start">
                 <h2 class="text-2xl font-display font-bold text-primary">Wyzwanie</h2>
                 <div class="space-y-6">
-                    <p class="text-lg text-gray-300 leading-relaxed">
+                    <p class="text-lg text-gray-700 leading-relaxed">
                         Proces obsługi zamówień był w pełni manualny. Pracownicy musieli ręcznie przepisywać dane z
                         e-maili do systemu ERP.
                     </p>
                     <ul class="space-y-4">
-                        <li class="flex items-start gap-4 p-4 rounded-xl bg-white/5 border border-white/10">
-                            <i data-lucide="x-circle" class="w-6 h-6 text-red-400 shrink-0 mt-1"></i>
+                        <li class="flex items-start gap-4 p-4 rounded-xl bg-gray-100 border border-gray-200">
+                            <i data-lucide="x-circle" class="w-6 h-6 text-red-500 shrink-0 mt-1"></i>
                             <div>
                                 <h3 class="font-bold mb-1">Strata Czasu</h3>
-                                <p class="text-sm text-gray-400">Średnio 160 godzin miesięcznie poświęcano na samo
+                                <p class="text-sm text-gray-600">Średnio 160 godzin miesięcznie poświęcano na samo
                                     przepisywanie danych.</p>
                             </div>
                         </li>
-                        <li class="flex items-start gap-4 p-4 rounded-xl bg-white/5 border border-white/10">
-                            <i data-lucide="alert-octagon" class="w-6 h-6 text-red-400 shrink-0 mt-1"></i>
+                        <li class="flex items-start gap-4 p-4 rounded-xl bg-gray-100 border border-gray-200">
+                            <i data-lucide="alert-octagon" class="w-6 h-6 text-red-500 shrink-0 mt-1"></i>
                             <div>
                                 <h3 class="font-bold mb-1">Ryzyko Błędów</h3>
-                                <p class="text-sm text-gray-400">Ręczne wprowadzanie danych generowało pomyłki,
+                                <p class="text-sm text-gray-600">Ręczne wprowadzanie danych generowało pomyłki,
                                     które
                                     kosztowały firmę pieniądze i reputację.</p>
                             </div>
@@ -166,7 +166,7 @@
             <div class="grid md:grid-cols-[1fr_2fr] gap-12 items-start">
                 <h2 class="text-2xl font-display font-bold text-primary">Rozwiązanie</h2>
                 <div class="space-y-8">
-                    <p class="text-lg text-gray-300 leading-relaxed">
+                    <p class="text-lg text-gray-700 leading-relaxed">
                         Wdrożyliśmy inteligentnego agenta AI, który przejął kontrolę nad procesem zamówień.
                     </p>
 
@@ -175,14 +175,14 @@
                             <span
                                 class="absolute -left-[41px] top-0 w-6 h-6 rounded-full bg-primary border-4 border-background"></span>
                             <h3 class="text-xl font-bold mb-2">1. Monitoring Email</h3>
-                            <p class="text-gray-400">System automatycznie skanuje skrzynkę odbiorczą w poszukiwaniu
+                            <p class="text-gray-600">System automatycznie skanuje skrzynkę odbiorczą w poszukiwaniu
                                 nowych zamówień.</p>
                         </div>
                         <div class="relative">
                             <span
                                 class="absolute -left-[41px] top-0 w-6 h-6 rounded-full bg-primary border-4 border-background"></span>
                             <h3 class="text-xl font-bold mb-2">2. Ekstrakcja Danych (OCR/AI)</h3>
-                            <p class="text-gray-400">Zaawansowane algorytmy wyciągają kluczowe informacje z treści
+                            <p class="text-gray-600">Zaawansowane algorytmy wyciągają kluczowe informacje z treści
                                 maila
                                 i załączników (PDF, Excel).</p>
                         </div>
@@ -190,7 +190,7 @@
                             <span
                                 class="absolute -left-[41px] top-0 w-6 h-6 rounded-full bg-primary border-4 border-background"></span>
                             <h3 class="text-xl font-bold mb-2">3. Walidacja i Integracja</h3>
-                            <p class="text-gray-400">Dane są sprawdzane pod kątem poprawności, a następnie
+                            <p class="text-gray-600">Dane są sprawdzane pod kątem poprawności, a następnie
                                 automatycznie
                                 wprowadzane do systemu ERP.</p>
                         </div>
@@ -202,20 +202,20 @@
             <div class="grid md:grid-cols-[1fr_2fr] gap-12 items-start">
                 <h2 class="text-2xl font-display font-bold text-primary">Rezultaty</h2>
                 <div>
-                    <div class="p-8 rounded-3xl bg-gradient-to-br from-primary/20 to-accent/20 border border-white/10">
+                    <div class="p-8 rounded-3xl bg-gradient-to-br from-primary/20 to-accent/20 border border-gray-200">
                         <h3 class="text-2xl font-bold mb-6">Transformacja Biznesowa</h3>
                         <div class="space-y-6">
-                            <div class="flex items-center justify-between border-b border-white/10 pb-4">
+                            <div class="flex items-center justify-between border-b border-gray-200 pb-4">
                                 <span>Oszczędność czasu</span>
-                                <span class="text-xl font-bold text-green-400">160h / msc</span>
+                                <span class="text-xl font-bold text-green-600">160h / msc</span>
                             </div>
-                            <div class="flex items-center justify-between border-b border-white/10 pb-4">
+                            <div class="flex items-center justify-between border-b border-gray-200 pb-4">
                                 <span>Błędy przy wprowadzaniu</span>
-                                <span class="text-xl font-bold text-green-400">Wyeliminowane</span>
+                                <span class="text-xl font-bold text-green-600">Wyeliminowane</span>
                             </div>
                             <div class="flex items-center justify-between">
                                 <span>Czas reakcji na zamówienie</span>
-                                <span class="text-xl font-bold text-green-400">Natychmiastowy</span>
+                                <span class="text-xl font-bold text-green-600">Natychmiastowy</span>
                             </div>
                         </div>
                     </div>
@@ -226,19 +226,19 @@
     </section>
 
     <!-- Next Case Study -->
-    <section class="py-24 border-t border-white/5">
+    <section class="py-24 border-t border-gray-200">
         <div class="max-w-7xl mx-auto px-6 text-center">
             <p class="text-gray-500 mb-4">Następna realizacja</p>
             <h2 class="text-3xl md:text-5xl font-display font-bold mb-8">Art-Tim: Zarządzanie Flotą</h2>
             <a href="case-study-art-tim.html"
-                class="inline-flex items-center gap-2 px-8 py-4 rounded-full bg-white text-black font-bold hover:bg-gray-200 transition-colors">
+                class="inline-flex items-center gap-2 px-8 py-4 rounded-full bg-primary text-white font-bold hover:bg-primary/90 transition-colors">
                 Zobacz Case Study <i data-lucide="arrow-right" class="w-5 h-5"></i>
             </a>
         </div>
     </section>
 
     <!-- Footer -->
-    <footer class="bg-surface border-t border-white/5 py-12">
+    <footer class="bg-surface border-t border-gray-200 py-12">
         <div class="max-w-7xl mx-auto px-6 text-center text-gray-500 text-sm">
             &copy; 2025 Fluinty.
         </div>
