--- a/index.html
+++ b/index.html
@@ -150,13 +150,17 @@
 
             <h1
                 class="text-5xl md:text-7xl lg:text-8xl font-display font-bold tracking-tight mb-8 leading-tight text-text-main">
-                <span class="hero-word block opacity-0 translate-y-10 animate-fade-in-up"
-                    style="animation-delay: 0s;">Automatyzuj.</span>
-                <span
-                    class="hero-word block bg-clip-text text-transparent bg-gradient-to-r from-primary via-accent to-secondary opacity-0 translate-y-10 animate-fade-in-up"
-                    style="animation-delay: 0.2s;">Optymalizuj.</span>
-                <span class="hero-word block opacity-0 translate-y-10 animate-fade-in-up"
-                    style="animation-delay: 0.4s;">Rozwijaj.</span>
+                <div class="grid place-items-center h-[1.2em] overflow-hidden">
+                    <span
+                        class="col-start-1 row-start-1 bg-clip-text text-transparent bg-gradient-to-r from-primary via-accent to-secondary animate-text-loop"
+                        style="animation-delay: 0s;">Automatyzuj.</span>
+                    <span
+                        class="col-start-1 row-start-1 bg-clip-text text-transparent bg-gradient-to-r from-primary via-accent to-secondary animate-text-loop"
+                        style="animation-delay: 2.5s;">Optymalizuj.</span>
+                    <span
+                        class="col-start-1 row-start-1 bg-clip-text text-transparent bg-gradient-to-r from-primary via-accent to-secondary animate-text-loop"
+                        style="animation-delay: 5s;">Rozwijaj.</span>
+                </div>
             </h1>
 
             <p class="text-xl text-text-muted max-w-2xl mx-auto mb-12 animate-fade-in-up"
